--- a/ShangBao/appsettings.json
+++ b/ShangBao/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MySQLConnectionString": "Server=localhost;database=efcore;uid=root;pwd=root"
   }
 }
