--- a/ShangBao/ShangBao.csproj
+++ b/ShangBao/ShangBao.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.0" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="6.10.1-beta" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.0.0-pre3" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
